--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.0.0-rc.1",
     "vue": "^2.5.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -36,7 +38,7 @@
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.7",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -63,6 +65,7 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
